export interface DataConsumer <T> {
	items: T[];
}
